--- a/frontend/car_rental/src/components/Header.css
+++ b/frontend/car_rental/src/components/Header.css
@@ -1,4 +1,3 @@
-/* src/components/Header.css */
 
 .header {
     background: var(--white);
@@ -24,12 +23,11 @@
 }
 
 .logo img {
-    height: 35px; /* Adjust to your logo's size */
+    height: 35px;
     margin-right: 10px;
 }
-/* Add this if you don't want the text "SPEEDY RENTALS" next to the logo image if the logo image itself has the text */
 .logo span {
-    /*display: none; /* Hide the text if your logo image already contains the brand name */
+    
 }
 
 .nav-menu ul {
